@@ -1,0 +1,53 @@
+=head1 NAME
+
+totem-video-thumbnailer - video thumbnailer for the GNOME desktop
+
+=head1 SYNOPSYS
+
+B<totem-video-thumbnailer> [-s size] input output [backend options]
+
+=head1 DESCRIPTION
+
+This manual page documents briefly the B<totem-video-thumbnailer> command. This manual page was written for the Debian Project because  the original program does not have a manual page.
+
+B<totem-video-thumbnailer> is used internally by GNOME applications such as B<nautilus> to generate PNG thumbnails of video files. While it is possible to invoke it manually, it is usually done automatically by B<nautilus>.
+
+=head1 ARGUMENTS
+
+=over 8
+
+=item B<input>
+
+The input filename. This can be in any format that B<totem> can play.
+
+=item B<output>
+
+The output filename, output in PNG format.
+
+=item B<backend options>
+
+Options to be passed to the backend (i.e. B<xine> or B<gstreamer>).
+
+=back
+
+=head1 OPTIONS
+
+=over 8
+
+=item B<-s size>
+
+The size of the thumbnail. Example: "64x64". The default is "128x96".
+
+=back
+
+=head1 AUTHOR
+
+B<totem-video-thumbnailer> was written by Bastien Nocera <hadess@hadess.net>.
+
+This manual page was written by Zack Cerza <zcerza@coe.neu.edu> for the Debian Project (but may be used by others).
+
+=head1 SEE ALSO
+
+=over 8
+
+=item B<totem>, B<nautilus>
